--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "react",
+  "name": "react-css",
   "version": "1.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
+  "description": "",
+  "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "@emotion/react": "11.1.5",
